build_issue.txt
[aul 코드 빌드 이슈]

1. platform/core/appfw/aul-1 모듈 빌드 후 디바이스 설치 시 오류 발생

1) 코드 다운로드 경로: platform/core/appfw/aul-1
2) git branch -a 확인
3) git checkout tizen_2.2
4) gbs 이용 컴파일 후 rpm 생성 
    sudo gbs build -A armv7l --clean-once --include-all
5) 장치에 rpm 복사 후 설치시 에러 발생
    rpm -Uvh--force --nodeps aul-0.0.266-1.armv7l.rpm


[증상]
디바이스쪽 오류 내용
/sbin/ldconfig: /usr/lib/libSEC_OMX_Venc.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libSEC_OMX_Core.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libsecbasecomponent.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libsecmfcencapi.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libSEC_OMX_Adec.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libsrpapi.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libsecosal.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libsecmfcdecapi.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libSEC_Resourcemanager.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libSEC_OMX_Vdec.so.0 is not a symbolic link
/sbin/ldconfig: /usr/lib/libcscexynos4.so.0 is not a symbolic link

디바이스에 얼럿창 내용
wrt_launchpad_daemon has closed unexpectedly


[해결방법] 
platform/core/appfw/aul-1.git은 Tizen 3.0용 AUL 코드.
Tizen 3.0과 Tizem 2.2 코드 호환이 되지 않음. 2.2는 framework/appfw/aul-1 코드 이용.

2. 위 1의 방법을 이용하여 우분투에서 git checkout tizen_2.2로 빌드 할 경우 오류 발생

1) 코드 다운로드 경로: framework/appfw/aul-1
2) git branch -a 확인
3) git checkout tizen_2.2
4) gbs 이용 컴파일 후 rpm 생성 
    sudo gbs build -A armv7l --clean-once --include-all

[증상]
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:375:19: error: 'PMINFO_CLIENT_STATUS_UPGRADE' undeclared (first use in this function)
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:375:19: note: each undeclared identifier is reported only once for each function it appears in
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:376:2: error: 'pkgmgrinfo_client' undeclared (first use in this function)
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:376:21: error: 'pc' undeclared (first use in this function)
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:377:2: warning: implicit declaration of function 'pkgmgrinfo_client_new'
[  142s] /home/abuild/rpmbuild/BUILD/aul-0.0.286/am_daemon/amd_appinfo.c:377:29: error: 'PMINFO_REQUEST' undeclared (first use in this function) 

[해결방법]
~/.gbs.conf을 수정전 내용으로 변경

[general]
tmpdir=/var/tmp/
profile=profile.tizen2.2

[repo.tizen2.2.base]
url=http://download.tizen.org/snapshots/2.2/common/latest/repos/tizen-base/armv7l/packages/

[repo.tizen2.2.main]
url=http://download.tizen.org/snapshots/2.2/common/latest/repos/tizen-main/armv7l/packages/

[profile.tizen2.2]
repos=repo.tizen2.2.base, repo.tizen2.2.main

 
[power-manager 빌드 이슈]

3. 디바이스에서 설치시 오류 발생

sh-4.1# rpm -Uvh --nodeps --force power-manager-1.3.23-9.armv7l.rpm

[증상]
Key already exist. Use -f option to force update
Error!     create key memory/pm/state
Key already exist. Use -f option to force update
Error!     create key memory/pm/battery_timetofull
Key already exist. Use -f option to force update
Error!     create key memory/pm/battery_timetoempty
Key already exist. Use -f option to force update
Error!     create key memory/pm/custom_brightness_status
Key already exist. Use -f option to force update
Error!     create key memory/pm/brt_changed_lpm
Key already exist. Use -f option to force update
Error!     create key memory/pm/current_brt
Key already exist. Use -f option to force update
Error!     create key memory/pm/sip_status

[기타]
4.  rpm 빌드시 모든 설치 파일에서 오류 발생

1) sh-4.1# rpm -Uvh --nodeps --force power-manager-1.3.23-9.armv7l.rpm 
    위의 파일 이외의 파일도 동일 증상

[증상]
rpmdb: Thread/process xxxxx/xxxxxxx failed: Thread died in Berkeley DB library

[해결방법]
1) /var/lib/rpm 폴더 아래  __db.* 파일 모두 삭제
2) rpm --rebuilddb


5.   rpm 빌드시 모든 설치 파일에서 오류 발생 
sh-4.1# rpm -Uvh --nodeps --force power-manager-1.3.23-9.armv7l.rpm

[증상]
reading device security policy from /etc/device-sec-policy
/etc/device-sec-policy:1: parser error : Extra content at the end of the document
^
error: Failed to process sw sources from /etc/device-sec-policy

[해결방법]
이전에 복사해둔 platform.img 파일에서 /etc/device-sec-policy  파일을 복사.

6. rpm 빌드시 모든 설치 파일에서 오류 발생  
sh-4.1# rpm -Uvh --nodeps --force power-manager-1.3.23-9.armv7l.rpm 
[   96s] RPM build errors:
[   96s]     File must begin with "/": Apache-2.0
[   96s]     File must begin with "/": LICENSE.APLv2

동일이슈 : https://developer.tizen.org/ko/forums/general-support/unable-build-platform-calendar-core-app?langswitch=ko

